<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_format_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_photo"
                android:layout_marginEnd="20dp"/>
            <TextView
                android:id="@+id/text_count_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_photo" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_photo_small"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/text_count_photo_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_photo_small" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_photo_medium"
                android:layout_marginEnd="15dp" />
            <TextView
                android:id="@+id/text_count_photo_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_photo_medium" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_photo_big"
                android:layout_marginEnd="15dp" />

            <TextView
                android:id="@+id/text_count_photo_big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_photo_big" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/quantityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/enter_quantity" />
        </LinearLayout>

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityEditText"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/ok_button_label" />


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text" />


    </LinearLayout>

</RelativeLayout>
